# criando-agentes-ia

./: .env.copy  Aula2.ipynb  LICENSE  README.md  main.py  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
00-setup/: SETUP.md
Aula02/: aoai-chat.ipynb  aoai-search-solution.ipynb  main.py  word_embeddings.csv  words.csv
Aula03/: chamada-de-funcao.ipynb
Aula03/agentes/: README.md  pyproject.toml  report.md
Aula03/agentes/db/: chroma.sqlite3
Aula03/agentes/src/agentes/: crew.py  main.py
Aula03/agentes/src/agentes/config/: agents.yaml  tasks.yaml
Aula03/docs/: pinecone.ipynb
