[tool.poetry]
name = "agentes"
version = "0.1.0"
description = "agentes using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
agentes = "agentes.main:run"
run_crew = "agentes.main:run"
train = "agentes.main:train"
replay = "agentes.main:replay"
test = "agentes.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
